--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-
   <link rel="stylesheet" href="assets/icons/fontawesome/css/all.min.css">
   <!-- <link rel="stylesheet" href="../src/css/main.css"> -->
   <link rel="stylesheet" href="css/main.min.css">
@@ -29,65 +27,8 @@
           <div class="col-10">Adicionales</div>
         </div>
       </div>
-      <div class="row adicional">
-        <div class="col-6 pt-2 mb-3">
-          <div class="mb-2">
-            <p class="mb-0 adicional__name text-center">Pepperoni Rolls </p>
-            <div class="">
-              <img class="img-fluid" src="assets/images/rollsdepepperoni.jpg">
-            </div>
-            <p class="text-center mb-0 adicional__name">S/ 10.90</p>
-            <div class="adicional--height-detail2">
-              <p class="adicional--font14 text-center mb-2">6 riquísimos rolls de pepperoni enrollados con nuestra masa
-                especial</p>
-            </div>
-            <div class="row">
-              <div class="col-4 offset-1 text-right">
-                <button class=" decrement adicional__button" data-detail="6 riquísimos rolls de pepperoni enrollados con nuestra masa especial"
-                  data-name="pepperoniroll" data-precio=10.90 data-type=adicional id="pepperonirolladicionaldecrement">
-                  <i class="fas fa-minus"></i>
-                </button>
-              </div>
-              <div class="col-2 text-center adicional__number-span" id=pepperonirolladicional>0</div>
-              <div class="col-4">
-                <button class="increment adicional__button" data-detail="6 riquísimos rolls de pepperoni enrollados con nuestra masa especial"
-                  data-name="pepperoniroll" data-precio=10.90 data-type=adicional id="pepperonirolladicionalaument">
-                  <i class="fas fa-plus"></i>
-                </button>
-              </div>
-            </div>
+      <div class="row adicional" id="adicional">
 
-          </div>
-        </div>
-        <div class="col-6 pt-2 mb-3">
-          <div class="mb-2">
-            <p class="mb-0 adicional__name text-center">Wings </p>
-            <div class="">
-              <img class="img-fluid" src="assets/images/wings.jpg">
-            </div>
-            <p class="text-center mb-0 adicional__name">S/ 12.90</p>
-            <div class="adicional--height-detail2">
-              <p class="adicional--font14 text-center mb-2">6 alitas de pollo asadas al horno, servidas con nuestra
-                inigualable salsa BBQ</p>
-            </div>
-            <div class="row">
-              <div class="col-4 offset-1 text-right">
-                <button class=" decrement adicional__button" data-detail="6 alitas de pollo asadas al horno, servidas con nuestra inigualable salsa BBQ"
-                  data-name="wings" data-precio=12.90 data-type=adicional id="wingsadicionaldecrement">
-                  <i class="fas fa-minus"></i>
-                </button>
-              </div>
-              <div class="col-2 text-center adicional__number-span" id=wingsadicional>0</div>
-              <div class="col-4">
-                <button class="increment adicional__button" data-detail="6 alitas de pollo asadas al horno, servidas con nuestra inigualable salsa BBQ"
-                  data-name="wings" data-precio=12.90 data-type=adicional id="wingsadicionalaument">
-                  <i class="fas fa-plus"></i>
-                </button>
-              </div>
-            </div>
-
-          </div>
-        </div>
       </div>
     </div>
     <div class="container">
@@ -99,65 +40,8 @@
           <div class="col-10">Postres</div>
         </div>
       </div>
-      <div class="row adicional">
-        <div class="col-6 pt-2 mb-3">
-          <div class="mb-2">
-            <p class="mb-0 adicional__name text-center">CINNAMON <br> ROLLS </p>
-            <div class="">
-              <img class="img-fluid" src="assets/images/cinnamonrolls.jpg">
-            </div>
-            <p class="text-center mb-0 adicional__name">S/ 9.90</p>
-            <div class="adicional--height-detail2">
-              <p class="adicional--font14 text-center mb-2">6 riquísimos rolls enrollados con dulce de canela,
-                cubiertos con azúcar glaseada</p>
-            </div>
-            <div class="row">
-              <div class="col-4 offset-1 text-right">
-                <button class=" decrement adicional__button" data-detail="6 riquísimos rolls enrollados con dulce de canela, cubiertos con azúcar glaseada."
-                  data-name="cinnamonrolls" data-precio=9.90 data-type=adicional id="cinnamonrollsadicionaldecrement">
-                  <i class="fas fa-minus"></i>
-                </button>
-              </div>
-              <div class="col-2 text-center adicional__number-span" id=cinnamonrollsadicional>0</div>
-              <div class="col-4">
-                <button class="increment adicional__button" data-detail="6 riquísimos rolls enrollados con dulce de canela, cubiertos con azúcar glaseada."
-                  data-name="cinnamonrolls" data-precio=9.90 data-type=adicional id="cinnamonrollsadicionalaument">
-                  <i class="fas fa-plus"></i>
-                </button>
-              </div>
-            </div>
+      <div class="row adicional" id="postres">
 
-          </div>
-        </div>
-        <div class="col-6 pt-2 mb-3">
-          <div class="mb-2">
-            <p class="mb-0 adicional__name text-center">GERMAN <br> CHOCOLATE</p>
-            <div class="">
-              <img class="img-fluid" src="assets/images/germanchocolate.png">
-            </div>
-            <p class="text-center mb-0 adicional__name">S/ 9.90</p>
-            <div class="adicional--height-detail2">
-              <p class="adicional--font14 text-center mb-2">Nuestra deliciosa masa original, cubierto con chocolate y
-                coco</p>
-            </div>
-            <div class="row">
-              <div class="col-4 offset-1 text-right">
-                <button class=" decrement adicional__button" data-detail="El delicioso sabor del auténtico chocolate alemán, hecho con nuestra masa original, cubierto con chocolate y coco."
-                  data-name="chocolate" data-precio=9.90 data-type=adicional id="chocolateadicionaldecrement">
-                  <i class="fas fa-minus"></i>
-                </button>
-              </div>
-              <div class="col-2 text-center adicional__number-span" id=chocolateadicional>0</div>
-              <div class="col-4">
-                <button class="increment adicional__button" data-detail="El delicioso sabor del auténtico chocolate alemán, hecho con nuestra masa original, cubierto con chocolate y coco."
-                  data-name="chocolate" data-precio=9.90 data-type=adicional id="chocolateadicionalaument">
-                  <i class="fas fa-plus"></i>
-                </button>
-              </div>
-            </div>
-
-          </div>
-        </div>
       </div>
     </div>
 
@@ -170,65 +54,8 @@
           <div class="col-10">Extras</div>
         </div>
       </div>
-      <div class="row adicional">
-        <div class="col-6 pt-2 mb-3">
-          <div class="mb-2">
-            <p class="mb-0 adicional__name text-center">PEPPERONCINI </p>
-            <div class="">
-              <img class="img-fluid" src="assets/images/pepperoncini.jpg">
-            </div>
-            <p class="text-center mb-0 adicional__name">S/ 1.00</p>
-            <div class="adicional--height-detail3">
-              <p class="adicional--font14 text-center mb-2">Deliciosos pimientos picantes traídos de Grecia y Turkía.<br>
-                Por S/1.00 Disfruta de 4 unidades extra</p>
-            </div>
-            <div class="row">
-              <div class="col-4 offset-1 text-right">
-                <button class=" decrement adicional__button" data-detail="Deliciosos pimientos picantes traídos de Grecia y Turkía."
-                  data-name="pepperoncini" data-precio=1.00 data-type=adicional id="pepperonciniadicionaldecrement">
-                  <i class="fas fa-minus"></i>
-                </button>
-              </div>
-              <div class="col-2 text-center adicional__number-span" id=pepperonciniadicional>0</div>
-              <div class="col-4">
-                <button class="increment adicional__button" data-detail="Deliciosos pimientos picantes traídos de Grecia y Turkía."
-                  data-name="pepperoncini" data-precio=1.00 data-type=adicional id="pepperonciniadicionalaument">
-                  <i class="fas fa-plus"></i>
-                </button>
-              </div>
-            </div>
+      <div class="row adicional" id="extras">
 
-          </div>
-        </div>
-        <div class="col-6 pt-2 mb-3">
-          <div class="mb-2">
-            <p class="mb-0 adicional__name text-center">SALSA GARLIC </p>
-            <div class="">
-              <img class="img-fluid" src="assets/images/garlicsauce.jpg">
-            </div>
-            <p class="text-center mb-0 adicional__name">S/ 1.00</p>
-            <div class="adicional--height-detail3">
-              <p class="adicional--font14 text-center mb-2">Exclusiva y deliciosa salsa Garlic para disfrutar de forma
-                sin igual el borde de tu pizza</p>
-            </div>
-            <div class="row">
-              <div class="col-4 offset-1 text-right">
-                <button class=" decrement adicional__button" data-detail="Exclusiva y deliciosa salsa Garlic para disfrutar de forma sin igual el borde de tu pizza"
-                  data-name="garlic" data-precio=1.00 data-type=adicional id="garlicadicionaldecrement">
-                  <i class="fas fa-minus"></i>
-                </button>
-              </div>
-              <div class="col-2 text-center adicional__number-span" id=garlicadicional>0</div>
-              <div class="col-4">
-                <button class="increment adicional__button" data-detail="Exclusiva y deliciosa salsa Garlic para disfrutar de forma sin igual el borde de tu pizza"
-                  data-name="garlic" data-precio=1.00 data-type=adicional id="garlicadicionalaument">
-                  <i class="fas fa-plus"></i>
-                </button>
-              </div>
-            </div>
-
-          </div>
-        </div>
       </div>
     </div>
 
@@ -241,63 +68,8 @@
           <div class="col-10">Bebidas</div>
         </div>
       </div>
-      <div class="row adicional">
-        <div class="col-6 pt-2 mb-3">
-          <div class="mb-2">
-            <p class="mb-0 adicional__name text-center">Coca Cola </p>
-            <div class="">
-              <img class="img-fluid" src="assets/images/cocacola.png">
-            </div>
-            <p class="text-center mb-0 adicional__name">S/ 7.90</p>
-            <div class="">
-              <p class="adicional--font14 text-center mb-3">Coca Cola sabor original de 1,5L </p>
-            </div>
-            <div class="row">
-              <div class="col-4 offset-1 text-right">
-                <button class=" decrement adicional__button" data-detail="Coca Cola sabor original de 1,5L " data-name="cocacola"
-                  data-precio=7.90 data-type=adicional id="cocacolaadicionaldecrement">
-                  <i class="fas fa-minus"></i>
-                </button>
-              </div>
-              <div class="col-2 text-center adicional__number-span" id=cocacolaadicional>0</div>
-              <div class="col-4">
-                <button class="increment adicional__button" data-detail="Coca Cola sabor original de 1,5L " data-name="cocacola"
-                  data-precio=7.90 data-type=adicional id="cocacolaadicionalaument">
-                  <i class="fas fa-plus"></i>
-                </button>
-              </div>
-            </div>
+      <div class="row adicional" id="bebidas">
 
-          </div>
-        </div>
-        <div class="col-6 pt-2 mb-3">
-          <div class="mb-2">
-            <p class="mb-0 adicional__name text-center">Inca Kola </p>
-            <div class="">
-              <img class="img-fluid" src="assets/images/incakola.png">
-            </div>
-            <p class="text-center mb-0 adicional__name">S/ 7.90</p>
-            <div class="">
-              <p class="adicional--font14 text-center mb-3">Inca Kola sabor original de 1,5L </p>
-            </div>
-            <div class="row">
-              <div class="col-4 offset-1 text-right">
-                <button class=" decrement adicional__button" data-detail="Inca Kola sabor original de 1,5L " data-name="Inca Kola"
-                  data-precio=7.90 data-type=adicional id="incaKolaadicionaldecrement">
-                  <i class="fas fa-minus"></i>
-                </button>
-              </div>
-              <div class="col-2 text-center adicional__number-span" id=incaKolaadicional>0</div>
-              <div class="col-4">
-                <button class="increment adicional__button" data-detail="Inca Kola sabor original de 1,5L" data-name="Inca Kola"
-                  data-precio=7.90 data-type=adicional id="incaKolaadicionalaument">
-                  <i class="fas fa-plus"></i>
-                </button>
-              </div>
-            </div>
-
-          </div>
-        </div>
       </div>
     </div>
     <section class="detail">
@@ -314,8 +86,10 @@
       </div>
     </section>
   </footer>
-  <!-- <script src="../src/js/app.js"></script> -->
-  <script src="js/app.min.js"></script>
+  <script src="../src/js/data.js"></script>
+  <script src="../src/js/app.js"></script>
+  
+  <!-- <script src="js/app.min.js"></script> -->
 </body>
 
 </html>
