cambios en adicionales

--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
     <section class="detail">
       <h5 class="mb-0">Comentarios</h5>
       <div class="detail__line"></div>
-      <textarea class="p-2" id="comment-user" cols="30" rows="4" placeholder="Usa este espacio para indicar si deseas tus bebidas heladas o sin helar"></textarea>
+      <textarea class="p-2" id="comment-user" cols="30" rows="4" placeholder="Usa este espacio solo para indicar si deseas tus bebidas heladas o sin helar"></textarea>
     </section>
 
   </main>
