--- a/public/index.html
+++ b/public/index.html
@@ -2,77 +2,113 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="assets/icons/fontawesome/css/all.min.css">
-  <!-- <link rel="stylesheet" href="../src/css/main.css"> -->
-  <link rel="stylesheet" href="css/main.min.css">
-  <title>Adicionales</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="assets/icons/fontawesome/css/all.min.css">
+    <!-- <link rel="stylesheet" href="../src/css/main.css"> -->
+    <link rel="stylesheet" href="css/main.min.css">
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <title>Adicionales</title>
 </head>
 
 <body>
-  <header>
+<script>
+    (function (d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) {
+            return;
+        }
+        js = d.createElement(s);
+        js.id = id;
+        js.src = "//connect.facebook.net/en_US/messenger.Extensions.js";
+        fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'Messenger'));
+</script>
+<header>
     <div class="headerbox">
-      <img class="headerbox__image" src="assets/images/logo.png" alt="logo">
+        <img class="headerbox__image" src="assets/images/logo.png" alt="logo">
     </div>
-  </header>
-  <main>
+</header>
+<main>
     <div class="container">
-      <div class="adicional-section__title p-2">
-        <div class="row">
-          <div class="col-2">
-            <img class="adicional-section__image" src="assets/images/adicionales.png" alt="adicional-icon">
-          </div>
-          <div class="col-10">Adicionales</div>
+        <div class="adicional-section__title p-2">
+            <div class="row">
+                <div class="col-2">
+                    <img class="adicional-section__image" src="assets/images/adicionales.png" alt="adicional-icon">
+                </div>
+                <div class="col-10">Adicionales</div>
+            </div>
         </div>
-      </div>
-      <div class="row adicional" id="adicional">
+        <div class="row adicional" id="adicional">
 
-      </div>
+        </div>
     </div>
     <div class="container">
-      <div class="adicional-section__title p-2">
-        <div class="row">
-          <div class="col-2">
-            <img class="adicional-section__image" src="assets/images/rollito.svg" alt="adicional-icon">
-          </div>
-          <div class="col-10">Postres</div>
+        <div class="adicional-section__title p-2">
+            <div class="row">
+                <div class="col-2">
+                    <img class="adicional-section__image" src="assets/images/rollito.svg" alt="adicional-icon">
+                </div>
+                <div class="col-10">Postres</div>
+            </div>
         </div>
-      </div>
-      <div class="row adicional" id="postres">
+        <div class="row adicional" id="postres">
 
-      </div>
+        </div>
     </div>
 
     <div class="container">
-      <div class="adicional-section__title p-2">
-        <div class="row">
-          <div class="col-2">
-            <img class="adicional-section__image" src="assets/images/chile.svg" alt="adicional-icon">
-          </div>
-          <div class="col-10">Extras</div>
+        <div class="adicional-section__title p-2">
+            <div class="row">
+                <div class="col-2">
+                    <img class="adicional-section__image" src="assets/images/chile.svg" alt="adicional-icon">
+                </div>
+                <div class="col-10">Extras</div>
+            </div>
         </div>
-      </div>
-      <div class="row adicional" id="extras">
+        <div class="row adicional" id="extras">
 
-      </div>
+        </div>
     </div>
 
-  </main>
-  <footer>
+</main>
+<footer>
     <section class="confirm">
-      <div>
-        <button class="p-2 text-center confirm__btn-confirm-adicional  confirm__btn-confirm-adicional--promo2">Confirmar</button>
-      </div>
+        <div>
+            <button id="confirmOrder"
+                    class="p-2 text-center confirm__btn-confirm-adicional  confirm__btn-confirm-adicional--promo2">
+                Confirmar
+            </button>
+        </div>
     </section>
-  </footer>
+</footer>
 
-    
-  <script src="../src/js/data.js"></script>
-  <script src="../src/js/app.js"></script>
 
-  <!-- <script src="js/app.min.js"></script> -->
+<script src="../src/js/data.js"></script>
+<script src="../src/js/app.js"></script>
+
+<script>
+    window.extAsyncInit = function () {
+        console.log('MessengerExtensions are ready');
+
+        $('#confirmOrder').click(function (event) {
+
+            MessengerExtensions.requestCloseBrowser(function success() {
+                // webview closed
+                console.log('Closed the window!');
+            }, function error(error) {
+                // an error occurred
+                console.log('Error closing browser window!');
+                console.log(error);
+
+            });
+        });
+
+    };
+</script>
+
+<!-- <script src="js/app.min.js"></script> -->
 </body>
 
 </html>
